# osrs-wiki-parser

./: LICENSE  README.md  main.py  pyproject.toml
data/: README.md  diaries.json  free-to-play-quests.json  ironman-optimal-quest-guide.html  ironman-optimal-quest-guide.json  members-quests.json  miniquests.json  optimal-quest-guide.html  optimal-quest-guide.json  quest-list.html  update.py  update.sh
scripts/: README.md  diaries.sh  f2p-quests.sh  members-quests.sh
