[project]
name = "osrs-wiki-parser"
version = "0.1.0"
description = "parse the OSRS wiki into formats usable by the quest helper plugin"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
all = "error"
